# surface_renewal

./: .gitignore  .readthedocs.yaml  README.md  list.txt  pyproject.toml  surface_renewal.code-workspace
crbasic/: surface_renewal_csat.CR3
docs/: cli.md  conf.py  index.rst  installation.md  methods.md  quickstart.md  requirements.txt  theory.md
docs/api/: index.rst  io.rst  methods.rst  most.rst  pipeline.rst  preprocess.rst  structure.rst  utils.rst
docs/tutorials/: 01_quickstart.ipynb  02_method_comparison.ipynb  03_calibration.ipynb
scripts/: make_synthetic.py
src/surface_renewal/: __init__.py  compute.py  io.py  most.py  pipeline.py  structure.py  utils.py
src/surface_renewal/methods/: analysis.py  castellvi.py  chen97.py  fvs.py  snyder.py  wavelet.py
src/surface_renewal/preprocess/: __init__.py  calibration.py  despike.py  rotation.py  stability.py
tests/: helpers.py  test_cardano.py  test_castellvi.py  test_compare.py  test_compute.py  test_consistency.py  test_fvs.py  test_imports.py  test_most.py  test_pipeline.py  test_rotation.py  test_stability.py  test_stability_screen.py  test_structure.py  test_wavelet.py
